--- a/src/pages/organisation-cfg/organisation-configuration.module.css
+++ b/src/pages/organisation-cfg/organisation-configuration.module.css
@@ -4,11 +4,16 @@
 
 .header {
   background-color: white !important;
+  position: "sticky";
+   top: 0;
+   z-index: 1;
+   width: "100%"
 }
 
 .header > div {
   display: flex;
   justify-content: space-between;
+  
 }
 
 .content {
